src/objects/Status_Log__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Status Log</label>
    <nameField>
        <label>Status Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>